--- a/網頁/AboutUsPage/AboutUsPage.css
+++ b/網頁/AboutUsPage/AboutUsPage.css
@@ -5,8 +5,10 @@
 
 }
 html{
-	overflow: hidden;
+	overflow-x: hidden;
+	font-size: 12px;
 	font-family: Gen Jyuu Gothic ;
+	scroll-behavior: smooth;
 
 }
 body{
@@ -14,37 +16,258 @@ body{
 	font-family: Gen Jyuu Gothic ;
 	margin: 0;
     padding: 0;
-    border: 0;
     display: block;
     width: 100%;
-    height: 100%;
+    height: 200%;
+
 
 }
-video{
+.myBtn {
+  	
+  	position: fixed; /* Fixed/sticky position */
+  	margin-top: 2%; /* Place the button at the bottom of the page */
+  	margin-left: 92.5%; /* Place the button 30px from the right */
+  	z-index: 30; /* Make sure it does not overlap */
+	width: 5%;
+	padding-bottom: 5%;
+	border-radius: 50%;
+  	border: none; /* Remove borders */
+  	outline: none; /* Remove outline */
+  	background-color: #fff; /* Set a background color */
+	opacity: 0;
+  
+	transition: background-color 200ms,transform 1s; 
+	
+	
+}
+
+.myBtn.open{
+	background-color: #f0a550;
+	transform: scale(120);
+	user-select: none;	
+	
+}
+
+
+
+.MenuContent{
+	z-index: 0;
+	position: fixed;
+	margin-left: 45%;
+	margin-top: 5%;
+	width: 40%;
+	padding-bottom: 30%;
+	opacity: 0;
+	text-align: right;
+	transition: 1s;
+}
+.MenuContent.open{
+	
+	opacity: 1;
+}
+.MenuBtn{
+	
+	font-size: 7.5rem;
+	font-weight: bolder;
+	color: #CE7E24;
+	-webkit-text-size-adjust:none;
+	
+	
+}
+.MenuBtn:hover{
+	color: #184557;
+	
+}
+
+.Ab{
+	font-size: 6rem;
+}
+.AllCross{
+	position: fixed;
+	z-index: 35;
+	width: 5%;
+	padding-bottom: 5%;
+	margin-left: 92.5%;
+	margin-top: 2%;
+	border-radius: 50%;
+	opacity: 0;
+	
+	
+}
+.Cross1{
+	position: fixed;
+	z-index: 40;
+	margin-top: 1.7%;
+	margin-left: 1.125%;
+	width: 2.6%;
+	padding-bottom: 0.25%;
+	border-radius: 3px 3px 3px 3px;
+	background-color: #296177;
+	box-shadow: 0px 3px 6px #00000029;
+	transition: 0.5s; 
+
+}
+.Cross1.open{
+	margin-top: 2.3%;
+	transform: rotate(45deg);
+}
+.Cross2{
+	position: fixed;	
+	margin-top: 2.3%;
+	margin-left: 1.125%;
+	width: 2.6%;
+	padding-bottom: 0.25%;
+	border-radius: 3px 3px 3px 3px;
+	background-color: #296177;
+	box-shadow: 0px 3px 6px #00000029;
+	transition: 0.5s; 
+}
+.Cross2.open{
+	opacity: 0;
+}
+.Cross3{
+	position: fixed;	
+	margin-top: 2.9%;
+	margin-left: 1.125%;
+	width: 2.6%;
+	padding-bottom: 0.25%;
+	border-radius: 3px 3px 3px 3px;
+	background-color: #296177;
+	box-shadow: 0px 3px 6px #00000029;
+	transition: 0.5s; 
+}
+.Cross3.open{
+	margin-top: 2.3%;
+	transform: rotate(-45deg);
+}
+
+.LoadingAnimate{
+	position: fixed;
+	z-index: 800;
+	top: 0%;
+	left: 0%;
 	width: 100%;
-	height: 100%;
-	outline:none;
+	padding-bottom: 56%;
+	background-color: #fff;
+	
+}
+
+.loadingwrap {
+    width: 100%;
+    height: 100vh; 
+    position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
 
 }
 
-.allpg{
-	font-family: Gen Jyuu Gothic ;
-	font-weight: normal;
-	width: 1920px;
-	height: 8640px;
-	overflow: hidden;
+
+.l-word {
+    position: absolute;
+    top: 55%;
+    font-size: 28px;
+    letter-spacing: 12px;
+	text-align: center;
+   
+}
+
+.circle {
+    width: 1%;
+    left: 45%;
+    top: 45%; 
+    background-color: #999;
+    border-radius: 50%;
+    display: inline-block;
+    position: absolute;
+    transform-origin: 50%;
+    animation: circle .5s alternate infinite ease ;
+	animation-delay: 0.5s;		
 }
 
 
+
+.circle:nth-child(2) {
+    left: 50%;
+    animation-delay: .2s
+}
+
+.circle:nth-child(3) {
+    left: 55%;
+    animation-delay: .3s
+}
+
+@keyframes circle {
+    0% {
+        top: 45%;
+        height: 5px;
+        border-radius: 50px 50px 25px 25px;
+        transform: scaleX(1.7);
+    }
+    40% {
+        height: 20px;
+        border-radius: 50%;
+        transform: scaleX(1);
+    }
+    100% {
+        top: 30%;
+    }
+}
+
+.shadow {
+    width: 20px;
+    height: 4px;
+    border-radius: 50%;
+    background-color: rgba(0, 0, 0, .125);
+    position: absolute;
+    top: 60px;
+    animation: shadow .5s alternate infinite ease;
+}
+
+
+
+.shadow:nth-child(4) {
+    left: 35%;
+    animation-delay: .2s
+}
+
+.shadow:nth-child(5) {
+    left: 70%;
+    animation-delay: .3s
+}
+
+@keyframes shadow {
+    0% {
+        transform: scaleX(1.5);
+    }
+    40% {
+        transform: scaleX(1);
+        opacity: .7;
+    }
+    100% {
+        transform: scaleX(.2);
+        opacity: .4;
+    }
+}
+
+.CountTo100{
+	color: #000;
+	width: 500px;
+	height: 100px;
+	font-size: 32px;
+}
 
 
 
 .bar{
 	position: absolute;
-	z-index: 3;
-	font-size: 28px;
-	left: 535px;
-	top: 40px;
+	z-index: 2;
+	font-size: 2.33rem;
+	margin-left: 27.86%;
+	margin-top: 2%;
+	font-weight: normal;
+	-webkit-text-size-adjust:none;
 	
 }
 
@@ -61,70 +284,77 @@ button{
 }
 
 .view1{
-	width: 1920px;
-	height: 100%;
+	position: absolute;
+	z-index: 5;
+	margin-left: 0%;
+	margin-top: 0%;
+	width: 100%;
+	padding-bottom: 56%;
 	overflow: hidden;
+
 }
 .bg1{
 	position: absolute;
 	width: 100%;
-	height: 100%;
 	z-index: 0;
-	left: 0px;
-	top: 0px;
+	margin-left: 0%;
+	margin-top: 0%;
 }
 
 .P1Title{
 	position: absolute;
-	left: 500px;
-	top: 500px;
-	font-size: 140px;
+	margin-left: 26.04%;
+	margin-top: 26%;
+	width: 20%;
+	font-size: 11.66rem;
 	color: #004A5F;
 	font-weight: bold;
 	line-height: 1.2;
 }
 .P1MidLine{
-	position: relative;
-	left: 840px;
-	top: 665px;
-	width: 10px;
-	height: 290px;
+	position: absolute;
+	margin-left: 43.75%;
+	margin-top: 35%;
+	width: 0.6%;
+	height: 26.85%;
 	background-color: #004A5F;
 	border-radius: 5px;
 }
 .P1Content{
-	position: relative;
+	position: absolute;
 	z-index: 1;
-	left: 890px;
-	top: 360px;
-	width: 600px;
-	height: 600px;
-	font-size: 24px;
+	margin-left: 46.35%;
+	margin-top: 34%;
+	width: 31.25%;
+	height: 55.56%;
+	font-size: 2rem;
 	color: #001820;	
 	line-height: 1.2;
 }
 
 .view2{
-	width: 1920px;
-	height: 100%;
-	
-	
+	position: absolute;
+	z-index: -1;
+	margin-left: 0%;
+	margin-top: 56%;
+	width: 100%;
+	padding-bottom: 56%;
 	overflow: hidden;
+	
 }
 .bg2{
 	position: absolute;
 	z-index: 0;
-	left: 0px;
-	top: 1080px;
-	
+	margin-left: 0%;
+	margin-top: 0%;	
 }
 .TeamMember{
 	position: absolute;
-	top: 1020px;
-	width: 1920px;
-	height: 200px;
+	margin-top: 0%;
+	width: 100%;
+	height: 18.51%;
 	z-index: 2;
-	font-size: 84px;
+	font-size: 7rem;
 	color: #005934;
 	font-weight: bold;
 	text-align: center;
@@ -133,73 +363,80 @@ button{
 }
 .TMLine{
 	position: absolute;
-	z-index: -1;
-	top: 210px;
-	height: 6px;
-	width: 400px;
+	z-index: 5;
+	margin-top: 10.5%;
+	height: 2.5%;
+	width: 20.83%;
 	background-color: #005934;
 	border-radius: 3px;
 }
 .Teacher{
 	position: absolute;
 	z-index: 1;
-	left: 950px;
-	top: 1320px;
-	width: 250px;
-	height: 300px;
+	margin-left: 35%;
+	margin-top: 15%;
+	width: 26.04%;
+	height: 30%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 }
 .TeacherImg{
 	position: absolute;
-	left: -300px;
+	margin-left: -50%;
+	margin-top: 0%;
+	width: 50%;
 }
 .TeaName{
 	position: absolute;
 	z-index: 2;
-	top: 0px;
-	font-size: 56px;
+	margin-left: 95%;
+	margin-top: -20%;
+	width: 60%;
+	font-size: 4.67rem;
 	color: #00627E;
 	font-weight: bold;
 }
 .TeaLine{
 	position: absolute;
 	z-index: 1;
-	top: 150px;
-	width: 250px;
-	height: 6px;
+	margin-left: 65%;
+	margin-top:  0%;
+	width: 50%;
+	height: 1.6%;
 	border-radius: 3px;
 	background-color: #ff8100;
 }
 .TeaJob{
 	position: absolute;
 	z-index: 2;
-	top: 120px;
-	font-size: 48px;
+	margin-left: 90%;
+	margin-top: 20%;
+	width: 60%;
+	font-size: 4rem;
 	color: #00627E;
 }
 .Wei{
 	position: absolute;
 	z-index: 1;
-	left: 260px;
-	top: 1940px;
-	width: 250px;
-	height: 300px;
+	margin-left: 13.54%;
+	margin-top: 33%;
+	width: 13.03%;
+	height: 40.3%;
 	display: flex;
-	align-items: center;
 	justify-content: center;
 	
 }
 .WeiImg{
 	position: absolute;
-	top: -230px;
+	width: 85%;
+	margin-top: 0%;
 }
 .WeiName{
 	position: absolute;
 	z-index: 2;
-	top: 0px;
-	font-size: 40px;
+	margin-top: 90%;
+	font-size: 3.33rem;
 	color: #00627E;
 	font-weight: bold;
 }
@@ -207,142 +444,184 @@ button{
 .WeiLine{
 	position: absolute;
 	z-index: 1;
-	top: 100px;
-	width: 200px;
-	height: 6px;
+	margin-top: 132.5%;
+	width: 80%;
+	height: 1.5%;
 	border-radius: 3px;
 	background-color: #ff8100;
 }
 .WeiJob{
 	position: absolute;
 	z-index: 2;
-	top: 80px;
-	font-size: 28px;
+	margin-top: 125%;
+	font-size: 2.33rem;
 	color: #00627E;
 }
 
 .Guan{
 	position: absolute;
 	z-index: 1;
-	left: 640px;
-	top: 1940px;
-	width: 250px;
-	height: 300px;
+	margin-left: 33.33%;
+	margin-top: 33%;
+	width: 13.03%;
+	height: 40.3%;
 	display: flex;
-	align-items: center;
 	justify-content: center;
 	
 }
 .GuanImg{
 	position: absolute;
-	top: -232px;
+	width: 85%;
+	margin-top: 0%;
 }
 .GuanName{
 	position: absolute;
 	z-index: 2;
-	top: 0px;
-	font-size: 40px;
+	margin-top: 90%;
+	font-size: 3.33rem;
 	color: #00627E;
-	font-weight: bold;
+	font-Guanght: bold;
 }
 
 .GuanLine{
 	position: absolute;
 	z-index: 1;
-	top: 100px;
-	width: 200px;
-	height: 6px;
+	margin-top: 132.5%;
+	width: 80%;
+	height: 1.5%;
 	border-radius: 3px;
 	background-color: #ff8100;
 }
 .GuanJob{
 	position: absolute;
 	z-index: 2;
-	top: 80px;
-	font-size: 28px;
+	margin-top: 125%;
+	font-size: 2.33rem;
 	color: #00627E;
 }
 .Chang{
 	position: absolute;
 	z-index: 1;
-	left: 1020px;
-	top: 1940px;
-	width: 250px;
-	height: 300px;
+	margin-left: 53.13%;
+	margin-top: 33%;
+	width: 13.03%;
+	height: 40.3%;
 	display: flex;
-	align-items: center;
 	justify-content: center;
 	
 }
 .ChangImg{
 	position: absolute;
-	top: -227px;
+	width: 85%;
+	margin-top: 0%;
 }
 .ChangName{
 	position: absolute;
 	z-index: 2;
-	top: 0px;
-	font-size: 40px;
+	margin-top: 90%;
+	font-size: 3.33rem;
 	color: #00627E;
-	font-weight: bold;
+	font-Changght: bold;
 }
 
 .ChangLine{
 	position: absolute;
 	z-index: 1;
-	top: 100px;
-	width: 200px;
-	height: 6px;
+	margin-top: 132.5%;
+	width: 80%;
+	height: 1.5%;
 	border-radius: 3px;
 	background-color: #ff8100;
 }
 .ChangJob{
 	position: absolute;
 	z-index: 2;
-	top: 80px;
-	font-size: 28px;
+	margin-top: 125%;
+	font-size: 2.33rem;
 	color: #00627E;
 	text-align: center;
-	
 }
 .Tseng{
 	position: absolute;
 	z-index: 1;
-	left: 1400px;
-	top: 1940px;
-	width: 250px;
-	height: 300px;
+	margin-left: 72.92%;
+	margin-top: 33%;
+	width: 13.03%;
+	height: 40.3%;
 	display: flex;
-	align-items: center;
 	justify-content: center;
 	
 }
 .TsengImg{
 	position: absolute;
-	top: -225px;
+	width: 85%;
+	margin-top: 0%;
 }
 .TsengName{
 	position: absolute;
 	z-index: 2;
-	top: 0px;
-	font-size: 40px;
+	margin-top: 90%;
+	font-size: 3.33rem;
 	color: #00627E;
-	font-weight: bold;
+	font-Tsengght: bold;
 }
 
 .TsengLine{
 	position: absolute;
 	z-index: 1;
-	top: 100px;
-	width: 200px;
-	height: 6px;
+	margin-top: 132.5%;
+	width: 80%;
+	height: 1.5%;
 	border-radius: 3px;
 	background-color: #ff8100;
 }
 .TsengJob{
 	position: absolute;
 	z-index: 2;
-	top: 80px;
-	font-size: 28px;
+	margin-top: 125%;
+	font-size: 2.33rem;
 	color: #00627E;
+	text-align: center;
+}
+
+@media (min-width: 1280px) and (max-width: 1500px){
+	
+	html{
+		font-size: 8px;
+	}
+	
+}
+
+@media (min-width: 960px) and (max-width: 1280px){
+	
+	html{
+		font-size: 6px;
+	}
+	
+}
+@media (min-width: 600px) and (max-width: 960px){
+	
+	
+	html{
+		font-size: 4px;
+	}
+	
+	
+}
+
+@media (min-width: 376px) and (max-width: 600px){
+	
+	
+	html{
+		font-size: 2px;
+	}
+	
+}
+
+@media (min-width: 100px) and (max-width: 375px){
+	
+	html{
+		font-size: 1px;
+	}
+	
 }
