--- a/part5.css
+++ b/part5.css
@@ -26,7 +26,7 @@
 .references{
 	position: absolute;
 	z-index: 1;
-	font-size: 60px;
+	font-size: 5rem;
 	margin-top: 8%;
 	margin-left: 0%;
 	width: 100%;
@@ -50,7 +50,7 @@
 .CO2pro{
 	position: absolute;
 	margin-top: 5%;
-	font-size: 28px;
+	font-size: 2.33rem;
 	margin-left: 12%;
 	width: 16%;
 	height: 5%;
@@ -62,7 +62,7 @@
 .inforfrom{
 	position: absolute;
 	z-index: 5;
-	font-size: 20px;
+	font-size: 1.66rem;
 	magin-top: 25%;
 	margin-left: 2%;
 	text-align: left;
@@ -70,7 +70,7 @@
 .CO2cause{
 	position: absolute;
 	margin-top: 20%;
-	font-size: 28px;
+	font-size: 2.33rem;
 	margin-left: 12%;
 	width: 16%;
 	height: 5%;
@@ -84,7 +84,7 @@
 .CO2role{
 	position: absolute;
 	margin-top: 5%;
-	font-size: 28px;
+	font-size: 2.33rem;
 	margin-left: 60%;
 	width: 30%;
 	height: 5%;
@@ -92,102 +92,5 @@
 	letter-spacing: 0px;
 	color: #ACD3D2;
 	opacity: 1;
-	
-}
-@media (min-width: 1280px) and (max-width: 1800px){
-	
-	.references{
-		font-size: 54px;
-	}
-	.CO2pro{
-		font-size: 24px;
-	}
-	.CO2cause{
-		font-size: 24px;
-	}
-	.CO2role{
-		font-size: 24px;
-	}
-	.inforfrom{
-		font-size: 16px;
-	}
-}
-
-@media (min-width: 960px) and (max-width: 1280px){
-	
-	.references{
-		font-size: 48px;
-	}
-	.CO2pro{
-		font-size: 18px;
-	}
-	.CO2cause{
-		font-size: 18px;
-	}
-	.CO2role{
-		font-size: 18px;
-	}
-	.inforfrom{
-		font-size: 14px;
-	}
-	
-	
-}
-@media (min-width: 601px) and (max-width: 960px){
-	.references{
-		font-size: 36px;
-	}
-	.CO2pro{
-		font-size: 14px;
-	}
-	.CO2cause{
-		font-size: 14px;
-	}
-	.CO2role{
-		font-size: 14px;
-	}
-	.inforfrom{
-		font-size: 12px;
-	}
-	
-}
-
-@media (min-width: 376px) and (max-width: 600px){
-	
-	.references{
-		font-size: 24px;
-	}
-	.CO2pro{
-		font-size: 6px;
-	}
-	.CO2cause{
-		font-size: 6px;
-	}
-	.CO2role{
-		font-size: 6px;
-	}
-	.inforfrom{
-		font-size: 4px;
-	}
-		
-}
-
-@media (min-width: 100px) and (max-width: 375px){
-	
-	.references{
-		font-size: 12px;
-	}
-	.CO2pro{
-		font-size: 3px;
-	}
-	.CO2cause{
-		font-size: 3px;
-	}
-	.CO2role{
-		font-size: 3px;
-	}
-	.inforfrom{
-		font-size: 2px;
-	}
 	
 }
