--- a/網頁/AttackPage/AtackPagePart3.css
+++ b/網頁/AttackPage/AtackPagePart3.css
@@ -49,11 +49,22 @@
 .Longtime{
 	position: absolute;
 	z-index: 12;
-	margin-top: 18%;
-	margin-left: 62.5%;
+	margin-top: 17.5%;
+	margin-left: 62%;
 	color: #ffffff;
 	font-weight: 400;
+	font-size: 2.66rem;
+	
+}
+.LongtimeContent{
+	margin-top: -13.5%;
 	font-size: 1.5rem;
+	line-height: 1.5;
+}
+.AfterLongtime{
+	margin-left: 15%;
+	margin-top: 10%;
+	line-height: 0;
 }
 .LongtimeShapeRT{
 	position: absolute;
@@ -69,9 +80,8 @@
 	position: absolute;
 	z-index: 12;
 	margin-top: 20%;
-	left: 0px;
+	margin-left: 0%;
 	width: 100%;
-	border: 2px solid red;
 }
 .Bar350{
 	position: absolute;
@@ -81,6 +91,9 @@
 	padding-bottom: 1.5%;
 	background-color: #1C623F;
 	opacity: 1;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 .Bar350:before{
 	position: absolute;
@@ -227,8 +240,9 @@
 .Bar10000mark{
 	position: absolute;
 	z-index: 13;
-	margin-top: 14.5%;
-	margin-left: 31.77%;
+	margin-top: 3%;
+	height: 10%;
+	margin-left: 160%;
 	font-size: 4rem;
 	transform: rotate(90deg);
 	color: #ffffff;
@@ -269,8 +283,9 @@
 .Bar70000mark{
 	position: absolute;
 	z-index: 13;
-	margin-top: 19%;
-	margin-left: 47.91%;
+	margin-top: 2%;
+	height: 10%;
+	margin-left: 145%;
 	font-size: 4rem;
 	transform: rotate(90deg);
 	color: #ffffff;
@@ -310,8 +325,9 @@
 .Bar100000mark{
 	position: absolute;
 	z-index: 13;
-	margin-top: 23.5%;
-	margin-left: 66.67%;
+	margin-top: 1%;
+	height: 10%;
+	margin-left: 130%;
 	font-size: 4rem;
 	transform: rotate(90deg);
 	color: #ffffff;
